# DataStructures

./: .gitignore  CMakeLists.txt  README.md  codeforces.id  status.md
SegmentTree/: modifiedSegmentTree.cpp
bin.dbg/: 4a.ilk  Complex.ilk  Complexsad.ilk
prj.codeforces/: 0004a.cpp  0102b.cpp  0125b.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0617a.cpp  0915a.cpp  0978a.cpp  0978b.cpp  1230b.cpp  1352a.cpp  1692a.cpp  1869a.cpp  1872a.cpp  2010a.cpp  2050d.cpp  2051c.cpp  2051d.cpp  CMakeLists.txt  complex_struct.cpp
prj.lab/: CMakeLists.txt
prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp  arrayd.h  arrayd.hpp
prj.lab/arrayt/: arrayt.hpp
prj.lab/circlequeuel/: circlequeuel.cpp  circlequeuel.hpp
prj.lab/complex/: CMakeLists.txt  Complex.hpp  complex.cpp  complex.hpp
prj.lab/queuea/: queuea.cpp  queuea.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.h  rational.hpp
prj.lab/stackl/: stackl.cpp  stackl.hpp
prj.test/: CMakeLists.txt  arrayd_doctest.cpp  arrayd_test.cpp  arrayt_doctest.cpp  arrayt_test.cpp  complex_doctest.cpp  complex_test.cpp  queuea_doctest.cpp  rational_doctest.cpp  rational_test.cpp  stackl_doctest.cpp
