add_executable(4a 0004a.cpp)
add_executable(102b 0102b.cpp)
add_executable(125b 0125b.cpp)
add_executable(263a 0263a.cpp)
add_executable(271a 0271a.cpp)
add_executable(276a 0276a.cpp)
add_executable(617a 0617a.cpp)
add_executable(915a 0915a.cpp)
add_executable(0978a 0978a.cpp)
add_executable(978b 0978b.cpp)
add_executable(1230b 1230b.cpp)
add_executable(1352a 1352a.cpp)
add_executable(1692a 1692a.cpp)
add_executable(1869a 1869a.cpp)
add_executable(1872a 1872a.cpp)
add_executable(2010a 2010a.cpp)
add_executable(2050d 2050d.cpp)
add_executable(2051c 2051c.cpp)
add_executable(2051d 2051d.cpp)